--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/spolex/spolex.github.io/issues"
   },
-  "homepage": "https://github.com/spolex/spolex.github.io#readme",
+  "homepage": "https://github.com/spolex/spolex.github.io",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4"
