--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "spolex"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "https://github.com/spolex/spolex.github.io",
   "ignore": [
     "**/.*",
@@ -16,7 +16,11 @@
   ],
   "private": true,
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "~1.5.0",
+    "angular-route": "~1.5.0",
+    "angular-loader": "~1.5.0",
+    "angular-mocks": "~1.5.0",
+    "html5-boilerplate": "^5.3.0"
   },
   "devDependencies": {}
 }
